# wxopencvtest

./: CMakeLists.txt  README.md  bmpfromocvpanel.cpp  bmpfromocvpanel.h  convertmattowxbmp.cpp  convertmattowxbmp.h  ocvapp.cpp  ocvframe.cpp  ocvframe.h
